# RMG

./: CMakeLists.txt
.github/workflows/: build.yml
Source/RMG/: CMakeLists.txt  Globals.cpp  Globals.hpp  main.cpp
Source/RMG-Input/: CMakeLists.txt  common.hpp  main.cpp
Source/RMG-Input/Thread/: SDLThread.cpp
Source/RMG-Input/UserInterface/: MainDialog.cpp  MainDialog.hpp  MainDialog.ui  UIResources.qrc
Source/RMG-Input/UserInterface/Widget/: ControllerImageWidget.cpp  ControllerImageWidget.hpp  ControllerWidget.cpp  ControllerWidget.hpp  ControllerWidget.ui  CustomButton.cpp  CustomButton.hpp
Source/RMG-Updater/: CMakeLists.txt  main.cpp
Source/RMG/M64P/: ConfigApi.hpp  CoreApi.hpp  PluginApi.hpp
Source/RMG/M64P/Wrapper/: Config.cpp  Core.cpp  Plugin.hpp  Types.hpp  VidExt.hpp
Source/RMG/Thread/: RomSearcherThread.cpp  RomSearcherThread.hpp
Source/RMG/UserInterface/: MainWindow.cpp  MainWindow.hpp
Source/RMG/Utilities/: RomBrowserCache.cpp  RomBrowserCache.hpp
Source/Script/: Build.sh
